<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright 2011 Austin Wagner
 *     
 * This file is part of Mobile Shuttle Tracker.
 *
 *  Mobile Shuttle Tracker is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  Mobile Shuttle Tracker is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with Mobile Shuttle Tracker.  If not, see <http://www.gnu.org/licenses/>.
 *  
-->

<resources>
    <string name="app_name">Shuttle Tracker</string>
	<string name="no_conn">Network Connection Lost</string>
	<string name="favorites">Favorites</string>
	<string name="add_favorite">Add Favorite</string>
	<string name="remove_favorite">Remove Favorite</string>
	<string name="my_location_title">Display My Location</string>
	<string name="my_location_summary">Track Your GPS Location</string>
	<string name="options">Options</string>
	<string name="use_24_hr_time">Use 24 Hour Time</string>
	<string name="use_24_hr_on">Display All Times in 24 Hour Format</string>
	<string name="use_24_hr_off">Display All Times in 12 Hour Format</string>
	<string name="update_rate_title">Update Rate</string>
	<string name="update_rate_summary">Set How Often to Check for New Data</string>
	<string name="status_ok">OK</string>
	<string name="status_no_conn">No Network</string>
	<string name="center_map">Center Map</string>
	<string name="select_routes">Select Routes</string>
	<string name="button_ok">OK</string>
	<string name="etas">ETAs:</string>
	<string name="map_this">Map This</string>
</resources>
