<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright 2011 Austin Wagner
 *     
 * This file is part of Mobile Shuttle Tracker.
 *
 *  Mobile Shuttle Tracker is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  Mobile Shuttle Tracker is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with Mobile Shuttle Tracker.  If not, see <http://www.gnu.org/licenses/>.
 *  
-->

<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
>
  <CheckBoxPreference
    android:key="MY_LOCATION"
    android:title="@string/my_location_title"
    android:summary="@string/my_location_summary"
    android:defaultValue="true"
  />
  <CheckBoxPreference
  	android:key="USE_24_HOUR"
  	android:title="@string/use_24_hr_time"
  	android:summaryOn="@string/use_24_hr_on"
  	android:summaryOff="@string/use_24_hr_off"
  	android:defaultValue="false"
  />
  <!-- 
  <ListPreference
  	android:key="UPDATE_RATE"
  	android:title="@string/update_rate_title"
  	android:summary="@string/update_rate_summary"
  	android:entries="@array/update_rate"
  	android:entryValues="@array/update_rate_values"
  	android:defaultValue="5"
  /> -->
  
</PreferenceScreen>
